--- a/backend/contracts/account.yaml
+++ b/backend/contracts/account.yaml
@@ -33,6 +33,26 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/AccountResponseDTO'
+  /account/{username}:
+    get:
+      summary: Get user info by username
+      operationId: getUserByUsername
+      parameters:
+        - name: username
+          in: path
+          required: true
+          schema:
+            type: string
+            minLength: 1
+      responses:
+        '200':
+          description: Info of account
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/AccountResponseDTO'
 
 components:
   schemas:
